Codigo base do HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Trabalho da Faculdade</title>
 </head>
 <body>
-    
+    <h1>Citação:</h1>
+    <p1>não há</p1> <p2>saber maior</p2> <p3>ou</p3> <p4>saber menor</p4> <p5>há saberes diferentes</p5>
 </body>
 </html>
