Atualizção do meu trabalho, nesse commit eu adicionei o style e modifiquei as TAGds p para ficar mais facil de estilizar

--- a/index.html
+++ b/index.html
@@ -5,9 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho da Faculdade</title>
+    <style>
+
+        /* essa é a parte do css(estilização web), aqui eu acabei usando id nas tags do HTML então eu as identifiquei e atribuir as declarações necessárias para concluir a atividade */
+
+        #A{
+            color: greenyellow;
+        }
+
+        #B{
+            color: red;
+            font-size: 21px;
+        }
+
+        #C{
+            color: greenyellow;
+        }
+
+        #D{
+            color: blue;
+            font-size: 21px;
+        }
+
+        #E{
+            color: greenyellow;
+        }
+
+        #F{
+            color: greenyellow;
+        }
+        
+
+    </style>
 </head>
+
 <body>
+
+    <!-- no corpo do HTML eu preferir usar a tag P com id dessa forma fica mais fácil de estilizar no css!-->
+
     <h1>Citação:</h1>
-    <p1>não há</p1> <p2>saber maior</p2> <p3>ou</p3> <p4>saber menor</p4> <p5>há saberes diferentes</p5>
+    <p1 id="A">Não há</p1>
+    <p1 id="B">saber maior</p1> <p1 id="C">ou</p1> <p1 id="D">saber menor</p1> <p1 id="E">:há saberes diferentes.</p1>
+    <br><!-- aki eu usei um Br para quebrar a linha dessa forma eu consigo por o autor da citação-->
+    <p1 id="F">Paulo Freire</p1>
 </body>
 </html>
