Eu preferir separar o CSS do HMTL

--- a/index.html
+++ b/index.html
@@ -5,38 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho da Faculdade</title>
-    <style>
+    
+    <link rel="stylesheet" href="Estilo.css">
 
-        /* essa é a parte do css(estilização web), aqui eu acabei usando id nas tags do HTML então eu as identifiquei e atribuir as declarações necessárias para concluir a atividade */
-
-        #A{
-            color: greenyellow;
-        }
-
-        #B{
-            color: red;
-            font-size: 21px;
-        }
-
-        #C{
-            color: greenyellow;
-        }
-
-        #D{
-            color: blue;
-            font-size: 21px;
-        }
-
-        #E{
-            color: greenyellow;
-        }
-
-        #F{
-            color: greenyellow;
-        }
-        
-
-    </style>
 </head>
 
 <body>
